--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -3,7 +3,7 @@ bossname = 00시
 bosstime = 00:00
 genPeriod = 24:00
 startDate = 2020-07-02
-before_alert_ment = 입니다. 오늘 하루도 고생하셨습니다.
+before_alert_ment = 이네요. 오늘 하루도 고생하셨습니다. 
 alert_ment =  입니다. 오늘 하루도 화이팅해주세요.
 
 bossname = 필드보스(1차)
