--- a/boss.ini
+++ b/boss.ini
@@ -101,18 +101,6 @@ nogencheck = 1
 before_alert_ment = 입니다.
 alert_ment =  탐 입니다.
 
-bossname = 결전두크라스
-gentime = 07:50
-nogencheck = 1
-before_alert_ment = 입니다.
-alert_ment =  탐 입니다.
-
-bossname = 혈투벨프스
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다.
-alert_ment =  탐 입니다.
-
 bossname = 격돌케만
 gentime = 08:10
 nogencheck = 1
@@ -219,4 +207,52 @@ bossname = 라카탄
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다.
+alert_ment =  탐 입니다.
+
+bossname = 바눌린1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. 
+alert_ment =  탐 입니다.
+
+bossname = 바눌린2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. 
+alert_ment =  탐 입니다.
+
+bossname = 파스빌1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. 
+alert_ment =  탐 입니다.
+
+bossname = 파스빌2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. 
+alert_ment =  탐 입니다.
+
+bossname = 세티벨1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. 
+alert_ment =  탐 입니다.
+
+bossname = 세티벨2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. 
+alert_ment =  탐 입니다.
+
+bossname = 델락1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. 
+alert_ment =  탐 입니다.
+
+bossname = 델락2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. 
 alert_ment =  탐 입니다.
