--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -20,6 +20,12 @@ startDate = 2020-09-02
 before_alert_ment = 입니다.
 alert_ment =  시간 입니다.
 
+bossname = 그림자 이벤트몹
+bosstime = 21:30
+genPeriod = 24:00
+startDate = 2020-09-02
+before_alert_ment = 입니다.
+alert_ment =  시간 입니다.
 
 
 
