--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,20 +1,21 @@
 timezone = 9
 
-voicechannel = 701175594670620722
-textchannel = 701174993421205505
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
 racingchannel = 
+itemchannel = 
 
-before_alert = 3
-before_alert1 = 0
-mungChk = 1
-delmungcnt = 3
+before_alert = 1
+before_alert1 = 5
+mungChk = 10
+delmungcnt = 20
 
 bossInfoNum = 3
 
-restarttime = 22:00
+restarttime = 04:30
 restartPeriod = 1
 
 file_name = 
