--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -55,33 +55,9 @@ startDate = 2020-12-25
 before_alert_ment = 입니다.
 alert_ment =  시간 입니다.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+bossname = 펭타클로스
+bosstime = 20:40
+genPeriod = 24:00
+startDate = 2020-12-22
+before_alert_ment = 입니다.
+alert_ment =  시간 입니다.
