--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -13,14 +13,14 @@ startDate = 2021-01-03
 before_alert_ment = 입니다.
 alert_ment =  시간 입니다.
 
-bossname = 본캐 길던종합
+bossname = 흑당 길던종합
 bosstime = 22:10
 genPeriod = 168:00
 startDate = 2021-01-03
 before_alert_ment = 입니다.
 alert_ment =  시간 입니다.
 
-bossname = 부캐 길던종합
+bossname = 타르시 길던종합
 bosstime = 22:00
 genPeriod = 168:00
 startDate = 2021-01-04
