--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -27,7 +27,7 @@ startDate = 2021-02-22
 before_alert_ment = 입니다.
 alert_ment =  시간 입니다.
 
-bossname = 오든 가디온
+bossname = 
 bosstime = 22:00
 genPeriod = 168:00
 startDate = 2021-02-20
