--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -14,16 +14,16 @@ before_alert_ment = 입니다.
 alert_ment =  시간 입니다.
 
 bossname = 흑당 길던종합
-bosstime = 19:00
+bosstime = 22:00
 genPeriod = 168:00
 startDate = 2021-05-02
 before_alert_ment = 입니다.
 alert_ment =  시간 입니다.
 
-bossname = 타르시 길던종합
-bosstime = 21:10
+bossname = 메르겡 길던종합
+bosstime = 23:00
 genPeriod = 168:00
-startDate = 2021-04-26
+startDate = 2021-04-30
 before_alert_ment = 입니다.
 alert_ment =  시간 입니다.
 
@@ -54,104 +54,3 @@ genPeriod = 168:00
 startDate = 2021-04-30
 before_alert_ment = 입니다.
 alert_ment =  시간 입니다.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
